removed overflow hidden and fixed styling of cat calculator

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 	color: #323d66;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	overflow: hidden;
 }
 input {
 	-webkit-appearance: none;
